<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_subject"
        android:title="@string/nav_subjects" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_task"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/nav_timer" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />
</menu>
